[gd_scene load_steps=5 format=3 uid="uid://b5gug5ecibfou"]

[ext_resource type="Theme" uid="uid://vq7t843uek2d" path="res://ui/ui_theme.tres" id="1_5fn35"]
[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_xagxo"]
[ext_resource type="Script" path="res://scenes/ui/statistics_ui.gd" id="2_aeqc0"]
[ext_resource type="Script" path="res://scenes/ui/settings_ui.gd" id="2_tscx0"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5fn35")
script = ExtResource("1_xagxo")

[node name="PauseMenuUI" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(600, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -206.0
offset_right = 250.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuUI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenuUI/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "Resume"

[node name="StatisticsButton" type="Button" parent="PauseMenuUI/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Statistics"

[node name="SettingsButton" type="Button" parent="PauseMenuUI/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Settings
"

[node name="TutorialButton" type="Button" parent="PauseMenuUI/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Tutorial
"

[node name="ExitToMenuButton" type="Button" parent="PauseMenuUI/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Exit To Main Menu"

[node name="ExitGameButton" type="Button" parent="PauseMenuUI/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Exit Game"

[node name="StatisticsUI" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(600, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_aeqc0")

[node name="StatisticsVBox" type="VBoxContainer" parent="StatisticsUI"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="StatisticsLabel" type="Label" parent="StatisticsUI/StatisticsVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Statistics"

[node name="BackButton" type="Button" parent="StatisticsUI/StatisticsVBox/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="TotalPlayTimeHBox" type="HBoxContainer" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="StatisticsUI/StatisticsVBox/TotalPlayTimeHBox"]
layout_mode = 2
text = "Total session play time: "

[node name="TimeLabel" type="Label" parent="StatisticsUI/StatisticsVBox/TotalPlayTimeHBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="CurrentPlayTimeHBox" type="HBoxContainer" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="StatisticsUI/StatisticsVBox/CurrentPlayTimeHBox"]
layout_mode = 2
text = "Current session play time: "

[node name="TimeLabel" type="Label" parent="StatisticsUI/StatisticsVBox/CurrentPlayTimeHBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Fishing"

[node name="TotalFishingSessionsHBox" type="HBoxContainer" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="StatisticsUI/StatisticsVBox/TotalFishingSessionsHBox"]
layout_mode = 2
text = "Total fishing sessions: "

[node name="ValueLabel" type="Label" parent="StatisticsUI/StatisticsVBox/TotalFishingSessionsHBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="FishCaughtHBox" type="HBoxContainer" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="StatisticsUI/StatisticsVBox/FishCaughtHBox"]
layout_mode = 2
text = "Fish caught: "

[node name="ValueLabel" type="Label" parent="StatisticsUI/StatisticsVBox/FishCaughtHBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="TimesRodSnappedHBox" type="HBoxContainer" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="StatisticsUI/StatisticsVBox/TimesRodSnappedHBox"]
layout_mode = 2
text = "Times rod snapped:"

[node name="ValueLabel" type="Label" parent="StatisticsUI/StatisticsVBox/TimesRodSnappedHBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="TotalTrialsHBox" type="HBoxContainer" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="StatisticsUI/StatisticsVBox/TotalTrialsHBox"]
layout_mode = 2
text = "Total trials:"

[node name="ValueLabel" type="Label" parent="StatisticsUI/StatisticsVBox/TotalTrialsHBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="CompletedTrialsHBox" type="HBoxContainer" parent="StatisticsUI/StatisticsVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="StatisticsUI/StatisticsVBox/CompletedTrialsHBox"]
layout_mode = 2
text = "Completed trials:"

[node name="ValueLabel" type="Label" parent="StatisticsUI/StatisticsVBox/CompletedTrialsHBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="SettingsUI" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(600, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -173.5
offset_right = 238.0
offset_bottom = 173.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_tscx0")

[node name="SettingsVBox" type="VBoxContainer" parent="SettingsUI"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsUI/SettingsVBox"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="SettingsUI/SettingsVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Settings"

[node name="BackButton" type="Button" parent="SettingsUI/SettingsVBox/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="TabContainer" type="TabContainer" parent="SettingsUI/SettingsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
current_tab = 0

[node name="Movement" type="VBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MovementLabel" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Movement"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Movement settings"

[node name="SnapTurning" type="HBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer/Movement"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Movement/SnapTurning"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Snap turning:"

[node name="SnapTurningCB" type="CheckBox" parent="SettingsUI/SettingsVBox/TabContainer/Movement/SnapTurning"]
layout_mode = 2

[node name="DirectMovement" type="HBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer/Movement"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Movement/DirectMovement"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Direct movement:"

[node name="DirectMovementCB" type="CheckBox" parent="SettingsUI/SettingsVBox/TabContainer/Movement/DirectMovement"]
layout_mode = 2

[node name="Input" type="VBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="InputLabel" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Input"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Input settings"

[node name="xAxisDeadZone" type="HBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer/Input"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Input/xAxisDeadZone"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "X axis dead zone"

[node name="xAxisDeadZoneSlider" type="HSlider" parent="SettingsUI/SettingsVBox/TabContainer/Input/xAxisDeadZone"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.5
step = 0.01
value = 0.2

[node name="yAxisDeadZone" type="HBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer/Input"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Input/yAxisDeadZone"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Y axis dead zone"

[node name="yAxisDeadZoneSlider" type="HSlider" parent="SettingsUI/SettingsVBox/TabContainer/Input/yAxisDeadZone"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.5
step = 0.01
value = 0.1

[node name="Volume" type="VBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VolumeLabel" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Volume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Volume settings"

[node name="SFXVolume" type="HBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer/Volume"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Volume/SFXVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sound volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="SettingsUI/SettingsVBox/TabContainer/Volume/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer/Volume"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Volume/MusicVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Music volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsUI/SettingsVBox/TabContainer/Volume/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="Additional" type="VBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="AdditionalLabel" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Additional"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Additional settings"

[node name="PlayerHeight" type="HBoxContainer" parent="SettingsUI/SettingsVBox/TabContainer/Additional"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsUI/SettingsVBox/TabContainer/Additional/PlayerHeight"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Height adjust:"

[node name="PlayerHeightSlider" type="HSlider" parent="SettingsUI/SettingsVBox/TabContainer/Additional/PlayerHeight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 2.5
step = 0.05
value = 1.0

[node name="Buttons" type="HBoxContainer" parent="SettingsUI/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 72
alignment = 1

[node name="Save" type="Button" parent="SettingsUI/SettingsVBox/Buttons"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Save"

[node name="Reset" type="Button" parent="SettingsUI/SettingsVBox/Buttons"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Reset"

[node name="TutorialUI" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -196.5
offset_right = 260.0
offset_bottom = 196.5
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialVBox" type="VBoxContainer" parent="TutorialUI"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HBoxContainer" type="HBoxContainer" parent="TutorialUI/TutorialVBox"]
layout_mode = 2

[node name="TutorialLabel" type="Label" parent="TutorialUI/TutorialVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Tutorial"

[node name="BackButton" type="Button" parent="TutorialUI/TutorialVBox/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="TabContainer" type="TabContainer" parent="TutorialUI/TutorialVBox"]
layout_mode = 2
current_tab = 0

[node name="Movement" type="VBoxContainer" parent="TutorialUI/TutorialVBox/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="RichTextLabel" type="RichTextLabel" parent="TutorialUI/TutorialVBox/TabContainer/Movement"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "You can move using the left controller's thumbstick and turn using the right controller's thumbstick.
You grab items using the grip buttons on your controllers. Once you've grabbed an item, you can interact with it using the trigger buttons."
fit_content = true

[node name="Fishing" type="VBoxContainer" parent="TutorialUI/TutorialVBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TutorialUI/TutorialVBox/TabContainer/Fishing"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "You can fish in the lake using the fishing rod found on the dock.
First you will need to cast the fishing float by pressing the trigger on the controller that you've grabbed the fishing rod with.
Once it the water, the fishing float will bob and sometimes plunge. When it plunges, a direction will be displayed above the float. You need to yank the fishing rod in that direction during that moment.
When you've succeeded in enough trials, the fish will bite and then you can reel the float (and fish) in. Beware that reeling in builds tension. Reach the max and the fish will break away.
Once you've reeled the fish in close enough (the handle will lock), you can yank the fishing rod one last time to get the fish out of the water."
fit_content = true

[connection signal="pressed" from="PauseMenuUI/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenuUI/VBoxContainer/StatisticsButton" to="." method="_on_statistics_button_pressed"]
[connection signal="pressed" from="PauseMenuUI/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenuUI/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="PauseMenuUI/VBoxContainer/ExitToMenuButton" to="." method="_on_exit_to_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenuUI/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="visibility_changed" from="StatisticsUI" to="StatisticsUI" method="_on_visibility_changed"]
[connection signal="pressed" from="StatisticsUI/StatisticsVBox/HBoxContainer/BackButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="player_height_changed" from="SettingsUI" to="." method="_player_height_changed"]
[connection signal="pressed" from="SettingsUI/SettingsVBox/HBoxContainer/BackButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="SettingsUI/SettingsVBox/TabContainer/Movement/SnapTurning/SnapTurningCB" to="SettingsUI" method="_on_SnapTurningCB_pressed"]
[connection signal="pressed" from="SettingsUI/SettingsVBox/TabContainer/Movement/DirectMovement/DirectMovementCB" to="SettingsUI" method="_on_MovementDirectCB_pressed"]
[connection signal="value_changed" from="SettingsUI/SettingsVBox/TabContainer/Input/xAxisDeadZone/xAxisDeadZoneSlider" to="SettingsUI" method="_on_x_axis_dead_zone_slider_value_changed"]
[connection signal="value_changed" from="SettingsUI/SettingsVBox/TabContainer/Input/yAxisDeadZone/yAxisDeadZoneSlider" to="SettingsUI" method="_on_y_axis_dead_zone_slider_value_changed"]
[connection signal="value_changed" from="SettingsUI/SettingsVBox/TabContainer/Volume/SFXVolume/SFXVolumeSlider" to="SettingsUI" method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="SettingsUI/SettingsVBox/TabContainer/Volume/MusicVolume/MusicVolumeSlider" to="SettingsUI" method="_on_music_volume_slider_value_changed"]
[connection signal="drag_ended" from="SettingsUI/SettingsVBox/TabContainer/Additional/PlayerHeight/PlayerHeightSlider" to="SettingsUI" method="_on_PlayerHeightSlider_drag_ended"]
[connection signal="pressed" from="SettingsUI/SettingsVBox/Buttons/Save" to="SettingsUI" method="_on_Save_pressed"]
[connection signal="pressed" from="SettingsUI/SettingsVBox/Buttons/Reset" to="SettingsUI" method="_on_Reset_pressed"]
[connection signal="pressed" from="TutorialUI/TutorialVBox/HBoxContainer/BackButton" to="." method="_on_back_to_menu_button_pressed"]
